# src/docs/openAPI.yaml
@@ -10,6 +10,8 @@ servers:
 tags:
   - name: Auth
   - name: Users
+  - name: Roles
+  - name: Permissions
   - name: Departments
   - name: Documents
   - name: Dashboard
@@ -60,6 +62,8 @@ paths:
     post:
       tags: [Auth]
       summary: Logout
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -343,6 +347,191 @@ paths:
         "200":
           description: Success
 
+  # ===================== ROLES (RBAC) =====================
+
+  /api/rbac/roles:
+    get:
+      tags: [Roles]
+      summary: Get all roles
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Success
+
+    post:
+      tags: [Roles]
+      summary: Create role
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              example:
+                name: IT
+      responses:
+        "200":
+          description: Created
+
+    # /api/rbac/roles/{id}:
+    #   get:
+    #     tags: [Roles]
+    #     summary: Get role by ID
+    #     security:
+    #       - bearerAuth: []
+    #     parameters:
+    #       - name: id
+    #         in: path
+    #         required: true
+    #         schema:
+    #           type: string
+    #     responses:
+    #       "200":
+    #         description: Success
+
+    put:
+      tags: [Roles]
+      summary: Update role
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              example:
+                name: ADMIN
+      responses:
+        "200":
+          description: Updated
+
+    delete:
+      tags: [Roles]
+      summary: Delete role
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Deleted
+
+  /api/rbac/roles/{id}/assign-permissions:
+    post:
+      tags: [Roles]
+      summary: Assign permissions to role
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              example:
+                permissionIds:
+                  - "69e9dbfdf7f2cd6098e5ce1"
+                  - "69e9db60fd7f2cd6098e5ccd"
+                  - "69e9deb3fd7f2cd6098e5d2c"
+      responses:
+        "200":
+          description: Assign success
+
+    # ===================== PERMISSIONS (RBAC) =====================
+
+  /api/rbac/permissions:
+    get:
+      tags: [Permissions]
+      summary: Get all permissions
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Success
+
+    post:
+      tags: [Permissions]
+      summary: Create permission
+      security:
+        - bearerAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              example:
+                name: USER_DETAIL
+                resource: user
+                action: detail
+                description: Detail user
+      responses:
+        "200":
+          description: Created
+
+  /api/rbac/permissions/{id}:
+    get:
+      tags: [Permissions]
+      summary: Get permission by ID
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Success
+
+    put:
+      tags: [Permissions]
+      summary: Update permission
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              example:
+                name: USER_DETAIL
+                resource: user
+                action: detail
+                description: Detail user
+      responses:
+        "200":
+          description: Updated
+
+    delete:
+      tags: [Permissions]
+      summary: Delete permission
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Deleted
+
   # ================= DOCUMENT =================
   /api/documents/proposal:
     post:
@@ -455,6 +644,14 @@ paths:
             type: string
             example: "6982b38294d9a655aeec8cce"
 
+        - name: order
+          in: query
+          description: Thứ tự sort
+          schema:
+            type: string
+            enum: [asc, desc]
+            example: desc
+
       responses:
         "200":
           description: Success
@@ -517,30 +714,30 @@ paths:
         "200":
           description: Deleted
 
-  /api/documents/{id}/status:
-    put:
-      tags: [Documents]
-      summary: Update status
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                status:
-                  type: string
-                  example: IN_PROGRESS
-      responses:
-        "200":
-          description: Updated
+  # /api/documents/{id}/status:
+  #   put:
+  #     tags: [Documents]
+  #     summary: Update status
+  #     security:
+  #       - bearerAuth: []
+  #     parameters:
+  #       - name: id
+  #         in: path
+  #         required: true
+  #         schema:
+  #           type: string
+  #     requestBody:
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             properties:
+  #               status:
+  #                 type: string
+  #                 example: IN_PROGRESS
+  #     responses:
+  #       "200":
+  #         description: Updated
 
   /api/documents/{id}/reports:
     get:
@@ -815,8 +1012,9 @@ paths:
         "200":
           description: Stats
 
-    # ===================== EXPORT =====================
-    /api/export/import-proposal:
+  # ===================== IMPORT DOC =====================
+
+  /api/export/import-proposal:
     post:
       tags: [Excel Doc]
       summary: Import proposal from Excel
@@ -843,6 +1041,8 @@ paths:
                 type: object
                 example:
                   message: Import successful
+
+  # ===================== Export DOC =====================
 
   /api/export/export-documents-excel:
     get:
